elegant objects, immutability

--- a/elegant-objects/src/main/scala/chapter2.ipynb
+++ b/elegant-objects/src/main/scala/chapter2.ipynb
@@ -849,13 +849,10 @@
    "id": "65adba77fc78cc4b"
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-09-03T11:58:58.347183Z",
-     "start_time": "2025-09-03T11:58:57.223850Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
    "source": [
     "// A very small HTTP request stub; the method is part of its state\n",
     "trait Request { def fetch(): String }\n",
@@ -872,26 +869,259 @@
     "}\n",
     "\n",
     "// Usage\n",
-    "val bodyViaPost: String = new PostRequest(new HttpRequest).fetch()\n",
-    "\n"
+    "val bodyViaPost: String = new PostRequest(new HttpRequest).fetch()"
    ],
-   "id": "e2432f1e0eae128a",
+   "id": "91f1ae5e08fadbd3"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "## 2.6 Be immutable\n",
+    "\n",
+    "Make classes immutable to keep them small, cohesive, decoupled, and easy to reason about. An immutable object doesn’t change its state after creation; operations return new objects instead of mutating existing ones.\n",
+    "\n",
+    "Key ideas:\n",
+    "- Prefer vals over vars; keep fields private and final by default.\n",
+    "- Methods that “modify” return new instances (no setters).\n",
+    "- Small, focused objects compose behavior instead of sharing mutable state.\n"
+   ],
+   "id": "cd22d830f0d35dcd"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "### Mutable vs. Immutable example (money arithmetic)\n",
+   "id": "c25ca2b727f11efe"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
+    "// Bad: mutable object with in-place modification\n",
+    "final class MutableMoney(private var dollars: Int) {\n",
+    "  def mul(factor: Int): Unit = { dollars *= factor }\n",
+    "  override def toString: String = s\"$$$dollars\"\n",
+    "}\n",
+    "\n",
+    "val fiveMut = new MutableMoney(5)\n",
+    "fiveMut.mul(10)\n",
+    "println(fiveMut) // \"$50\" — original object changed\n"
+   ],
+   "id": "3f632521577c2d9b"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-03T12:26:44.850708Z",
+     "start_time": "2025-09-03T12:26:44.163547Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "// Good: immutable object that returns a new instance\n",
+    "final case class ImmutableMoney(private val dollars: Int) {\n",
+    "  def mul(factor: Int): ImmutableMoney = copy(dollars = dollars * factor)\n",
+    "  override def toString: String = s\"$$$dollars\"\n",
+    "}\n",
+    "\n",
+    "val five = ImmutableMoney(5)\n",
+    "val fifty = five.mul(10)\n",
+    "println(five)   // \"$5\"\n",
+    "println(fifty)  // \"$50\"\n"
+   ],
+   "id": "c79ea334db224f39",
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "$5\n",
+      "$50\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
-       "defined \u001B[32mtrait\u001B[39m \u001B[36mRequest\u001B[39m\n",
-       "defined \u001B[32mclass\u001B[39m \u001B[36mHttpRequest\u001B[39m\n",
-       "defined \u001B[32mclass\u001B[39m \u001B[36mPostRequest\u001B[39m\n",
-       "\u001B[36mbodyViaPost\u001B[39m: \u001B[32mString\u001B[39m = \u001B[32m\"Fetched with method=POST\"\u001B[39m"
+       "defined \u001B[32mclass\u001B[39m \u001B[36mImmutableMoney\u001B[39m\n",
+       "\u001B[36mfive\u001B[39m: \u001B[32mImmutableMoney\u001B[39m = \u001B[33mImmutableMoney\u001B[39m(dollars = \u001B[32m5\u001B[39m)\n",
+       "\u001B[36mfifty\u001B[39m: \u001B[32mImmutableMoney\u001B[39m = \u001B[33mImmutableMoney\u001B[39m(dollars = \u001B[32m50\u001B[39m)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 31
+   "execution_count": 32
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "Why this is better:\n",
+    "- No hidden state changes; values read like they are named.\n",
+    "- Easier to test and reason about; no ordering surprises.\n",
+    "- Safer to share across threads (no synchronization needed for reads).\n"
+   ],
+   "id": "ec2573b0016a7c64"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "### Practical rules of thumb for immutability in Scala\n",
+    "\n",
+    "- Use case classes and vals; avoid public vars and setters.\n",
+    "- Prefer tiny value objects over exposing raw primitives.\n",
+    "- Keep constructors doing all necessary initialization; don’t leave objects half-baked.\n",
+    "- If you need a different value, construct a different object.\n"
+   ],
+   "id": "26011c89ad8c07fa"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "### Lazy loading without mutability\n",
+    "\n",
+    "Lazy loading is often cited as a reason to mutate. In Scala, lazy val gives you safe, one-time initialization without exposing mutability.\n"
+   ],
+   "id": "4c12fdcaa6a647cf"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-03T12:32:51.614399Z",
+     "start_time": "2025-09-03T12:32:50.920133Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "// A source for HTML content\n",
+    "trait HtmlSource { def fetch(uri: String): String }\n",
+    "\n",
+    "// Immutable page with lazy-loaded content\n",
+    "final class PageLazy(private val uri: String, private val src: HtmlSource) {\n",
+    "  // Thread-safe, computed once on first access, then cached\n",
+    "  lazy private val html: String = src.fetch(uri)\n",
+    "  def content: String = html\n",
+    "}\n",
+    "\n",
+    "final class StubSource extends HtmlSource {\n",
+    "  override def fetch(uri: String): String = s\"<html><body>Loaded $uri</body></html>\"\n",
+    "}\n",
+    "\n",
+    "val page = new PageLazy(\"https://example.org\", new StubSource)\n",
+    "println(page.content) // triggers fetch once\n",
+    "println(page.content) // returns cached result\n"
+   ],
+   "id": "198e5f96952ed22b",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<html><body>Loaded https://example.org</body></html>\n",
+      "<html><body>Loaded https://example.org</body></html>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001B[32mtrait\u001B[39m \u001B[36mHtmlSource\u001B[39m\n",
+       "defined \u001B[32mclass\u001B[39m \u001B[36mPageLazy\u001B[39m\n",
+       "defined \u001B[32mclass\u001B[39m \u001B[36mStubSource\u001B[39m\n",
+       "\u001B[36mpage\u001B[39m: \u001B[32mPageLazy\u001B[39m = ammonite.$sess.cmd35$Helper$PageLazy@30ab8e82"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 35
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "Notes:\n",
+    "- lazy val in Scala is thread-safe and evaluates at most once per instance.\n",
+    "- Keep dependencies small (like HtmlSource) and inject them; PageLazy stays cohesive and testable.\n"
+   ],
+   "id": "7e07ddcd27e92282"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "### A tiny, reusable memoization helper\n",
+    "\n",
+    "For computed values that aren’t fields, wrap the computation in a tiny object and memoize it.\n"
+   ],
+   "id": "8f8714b9a1c27ce2"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-03T12:34:30.536078Z",
+     "start_time": "2025-09-03T12:34:29.850979Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "final class Memoized[A](thunk: => A) {\n",
+    "  // Evaluate on first access and cache thereafter\n",
+    "  lazy val value: A = thunk\n",
+    "}\n",
+    "\n",
+    "// Usage: any expensive computation\n",
+    "def heavy(n: Int): Int = { println(s\"computing for $n\"); n * n }\n",
+    "\n",
+    "val squared = new Memoized(heavy(21))\n",
+    "println(squared.value) // computes\n",
+    "println(squared.value) // cached\n"
+   ],
+   "id": "857fc7176bb7ad82",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "computing for 21\n",
+      "441\n",
+      "441\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001B[32mclass\u001B[39m \u001B[36mMemoized\u001B[39m\n",
+       "defined \u001B[32mfunction\u001B[39m \u001B[36mheavy\u001B[39m\n",
+       "\u001B[36msquared\u001B[39m: \u001B[32mMemoized\u001B[39m[\u001B[32mInt\u001B[39m] = ammonite.$sess.cmd36$Helper$Memoized@23e43f74"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 36
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "### Takeaways\n",
+    "\n",
+    "- Don’t mutate objects; return new ones.\n",
+    "- Use lazy val for one-time, cached initialization without sacrificing immutability.\n",
+    "- Prefer micro-objects and explicit dependencies over shared mutable state.\n"
+   ],
+   "id": "92b7089371ee70e0"
   }
  ],
  "metadata": {
