elegant objects, immutability

--- a/elegant-objects/src/main/scala/chapter2.ipynb
+++ b/elegant-objects/src/main/scala/chapter2.ipynb
@@ -1119,9 +1119,183 @@
     "\n",
     "- Don’t mutate objects; return new ones.\n",
     "- Use lazy val for one-time, cached initialization without sacrificing immutability.\n",
-    "- Prefer micro-objects and explicit dependencies over shared mutable state.\n"
+    "- Prefer micro-objects and explicit dependencies over shared mutable state."
    ],
-   "id": "92b7089371ee70e0"
+   "id": "dba05e1c527f77ee"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "### 2.6.1 Identity mutability\n",
+    "\n",
+    "Immutable objects don’t suffer from “identity mutability.” The bug appears when an object’s equality and hash code depend on mutable state: after the object is used as a key in a map (or element of a set), mutating it breaks the collection’s invariants. Lookups become unpredictable and duplicates (by equality) may appear.\n"
+   ],
+   "id": "afb127468c783cf"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-04T21:48:46.188556Z",
+     "start_time": "2025-09-04T21:48:45.075879Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import scala.collection.mutable\n",
+    "\n",
+    "// Bad: key equality depends on mutable state\n",
+    "final class MutableKeyMoney(private var _dollars: Int) {\n",
+    "  def dollars: Int = _dollars\n",
+    "  def mul(factor: Int): Unit = { _dollars *= factor }\n",
+    "\n",
+    "  // Equality and hashCode depend on (mutable) dollars\n",
+    "  override def equals(obj: Any): Boolean = obj match {\n",
+    "    case that: MutableKeyMoney => this._dollars == that._dollars\n",
+    "    case _ => false\n",
+    "  }\n",
+    "  override def hashCode(): Int = java.lang.Integer.hashCode(_dollars)\n",
+    "  override def toString: String = s\"$$$dollars\"\n",
+    "}\n",
+    "\n",
+    "val map = mutable.HashMap[MutableKeyMoney, String]()\n",
+    "val fiveK = new MutableKeyMoney(5)\n",
+    "val tenK  = new MutableKeyMoney(10)\n",
+    "map.put(fiveK, \"five\")\n",
+    "map.put(tenK,  \"ten\")\n",
+    "\n",
+    "// Mutate one key after it has been placed in the map\n",
+    "fiveK.mul(2) // now equals(tenK) and hashCode matches tenK\n",
+    "\n",
+    "println(map)                  // keys may look equal ($10, $10), but both entries still exist internally\n",
+    "println(map.get(fiveK))       // lookup may fail or be inconsistent (hash bucket mismatch)\n",
+    "println(map.get(tenK))        // may succeed, highlighting the broken invariant\n",
+    "println(map.keys.count(k => k == fiveK)) // > 1 by equality, revealing duplicates by equals()\n"
+   ],
+   "id": "fcccf7226643e5d5",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HashMap($10 -> five, $10 -> ten)\n",
+      "Some(ten)\n",
+      "Some(ten)\n",
+      "2\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\u001B[32mimport \u001B[39m\u001B[36mscala.collection.mutable\n",
+       "\n",
+       "// Bad: key equality depends on mutable state\n",
+       "\u001B[39m\n",
+       "defined \u001B[32mclass\u001B[39m \u001B[36mMutableKeyMoney\u001B[39m\n",
+       "\u001B[36mmap\u001B[39m: \u001B[32mHashMap\u001B[39m[\u001B[32mMutableKeyMoney\u001B[39m, \u001B[32mString\u001B[39m] = \u001B[33mHashMap\u001B[39m($10 -> \u001B[32m\"five\"\u001B[39m, $10 -> \u001B[32m\"ten\"\u001B[39m)\n",
+       "\u001B[36mfiveK\u001B[39m: \u001B[32mMutableKeyMoney\u001B[39m = $10\n",
+       "\u001B[36mtenK\u001B[39m: \u001B[32mMutableKeyMoney\u001B[39m = $10\n",
+       "\u001B[36mres37_5\u001B[39m: \u001B[32mOption\u001B[39m[\u001B[32mString\u001B[39m] = \u001B[32mNone\u001B[39m\n",
+       "\u001B[36mres37_6\u001B[39m: \u001B[32mOption\u001B[39m[\u001B[32mString\u001B[39m] = \u001B[32mNone\u001B[39m"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 37
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "Why this happens:\n",
+    "- Hash-based collections place keys into buckets using hashCode computed at insertion time.\n",
+    "- If hashCode/equals depend on mutable fields and those fields change after insertion, the stored bucket no longer matches the key’s identity.\n",
+    "- Future lookups use the new hash/equality and search the wrong bucket; duplicates-by-equality can also appear.\n"
+   ],
+   "id": "2faaa4a59f87bc39"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Safe alternative: immutable keys (stable equality)\n",
+   "id": "110f37ac155dd13"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-04T21:51:50.197732Z",
+     "start_time": "2025-09-04T21:51:49.288298Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "import scala.collection.mutable\n",
+    "\n",
+    "// Good: immutable key with stable equals/hashCode\n",
+    "final case class MoneyKey(dollars: Int) {\n",
+    "  override def toString: String = s\"$$$dollars\"\n",
+    "}\n",
+    "\n",
+    "val safe = mutable.HashMap[MoneyKey, String]()\n",
+    "safe.put(MoneyKey(5),  \"five\")\n",
+    "safe.put(MoneyKey(10), \"ten\")\n",
+    "\n",
+    "// We “change” by creating a new key; the old entry remains valid\n",
+    "val fiveKey = MoneyKey(5)\n",
+    "safe.put(fiveKey.copy(dollars = fiveKey.dollars * 2), \"ten-again\")\n",
+    "\n",
+    "println(safe)                 // Map($5 -> five, $10 -> ten, $10 -> ten-again)\n",
+    "println(safe.get(MoneyKey(10))) // deterministic and consistent\n"
+   ],
+   "id": "c17cfa8844d6fa06",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HashMap($5 -> five, $10 -> ten-again)\n",
+      "Some(ten-again)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\u001B[32mimport \u001B[39m\u001B[36mscala.collection.mutable\n",
+       "\n",
+       "// Good: immutable key with stable equals/hashCode\n",
+       "\u001B[39m\n",
+       "defined \u001B[32mclass\u001B[39m \u001B[36mMoneyKey\u001B[39m\n",
+       "\u001B[36msafe\u001B[39m: \u001B[32mHashMap\u001B[39m[\u001B[32mMoneyKey\u001B[39m, \u001B[32mString\u001B[39m] = \u001B[33mHashMap\u001B[39m(\n",
+       "  \u001B[33mMoneyKey\u001B[39m(dollars = \u001B[32m5\u001B[39m) -> \u001B[32m\"five\"\u001B[39m,\n",
+       "  \u001B[33mMoneyKey\u001B[39m(dollars = \u001B[32m10\u001B[39m) -> \u001B[32m\"ten-again\"\u001B[39m\n",
+       ")\n",
+       "\u001B[36mres38_3\u001B[39m: \u001B[32mOption\u001B[39m[\u001B[32mString\u001B[39m] = \u001B[32mNone\u001B[39m\n",
+       "\u001B[36mres38_4\u001B[39m: \u001B[32mOption\u001B[39m[\u001B[32mString\u001B[39m] = \u001B[32mNone\u001B[39m\n",
+       "\u001B[36mfiveKey\u001B[39m: \u001B[32mMoneyKey\u001B[39m = \u001B[33mMoneyKey\u001B[39m(dollars = \u001B[32m5\u001B[39m)\n",
+       "\u001B[36mres38_6\u001B[39m: \u001B[32mOption\u001B[39m[\u001B[32mString\u001B[39m] = \u001B[33mSome\u001B[39m(value = \u001B[32m\"ten\"\u001B[39m)"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 38
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "Guidelines to avoid identity mutability bugs:\n",
+    "- Never use mutable objects as keys in HashMap/HashSet (or any hashed structure).\n",
+    "- Ensure equals/hashCode rely only on immutable state. Prefer case classes for value objects.\n",
+    "- Keep classes final with private vals; expose behavior, not setters.\n",
+    "- “Modifications” should produce new objects, leaving existing map keys valid forever.\n"
+   ],
+   "id": "92bc6994d83a08cc"
   }
  ],
  "metadata": {
