elegant objects, Failure atomicity

--- a/elegant-objects/src/main/scala/chapter2.ipynb
+++ b/elegant-objects/src/main/scala/chapter2.ipynb
@@ -1295,7 +1295,244 @@
     "- Keep classes final with private vals; expose behavior, not setters.\n",
     "- “Modifications” should produce new objects, leaving existing map keys valid forever.\n"
    ],
-   "id": "92bc6994d83a08cc"
+   "id": "6d46d3f112fd06a"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "### 2.6.2 Failure atomicity\n",
+    "\n",
+    "Failure atomicity means an operation either succeeds completely or it fails leaving the object exactly as it was before the attempt. Immutable objects give you this for free: since they never mutate internal state, either a new object is created (success) or an exception is thrown (failure) and the original object remains intact. Mutable objects, on the other hand, can easily end up half‑updated when an exception is raised mid‑way through a method.\n",
+    "\n",
+    "We will contrast three implementations:\n",
+    "1. A naive mutable implementation that can leave the object inconsistent on failure.\n",
+    "2. An immutable version that is naturally failure atomic.\n",
+    "3. A mutable implementation that manually restores prior state (higher complexity / risk)."
+   ],
+   "id": "892652c9258e9b45"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "#### 1. Naive mutable object (partial update on failure)",
+   "id": "91ac0f7b1774e6d7"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-08T12:56:40.497236Z",
+     "start_time": "2025-09-08T12:56:39.761373Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "final class CashMutablePartial(private var dollars: Int, private var cents: Int) {\n",
+    "  // Multiplies both parts; negative factor simulates a validation failure mid-way\n",
+    "  def mul(factor: Int): Unit = {\n",
+    "    dollars *= factor              // (1) state already changed\n",
+    "    if (factor < 0) {              // simulate a validation problem discovered after first change\n",
+    "      throw new IllegalArgumentException(\"factor must be non-negative\")\n",
+    "    }\n",
+    "    cents *= factor                // (2) never reached if exception above; cents stays old value\n",
+    "  }\n",
+    "  override def toString: String = f\"$$$dollars%d.$cents%02d\"\n",
+    "}\n",
+    "\n",
+    "val partialCash = new CashMutablePartial(10, 50)\n",
+    "println(s\"Before (partial): $partialCash\")\n",
+    "try partialCash.mul(-2) catch { case e: Exception => println(s\"Failed: ${e.getMessage}\") }\n",
+    "println(s\"After failure (partial):  $partialCash  // dollars changed, cents not -> inconsistent state\")"
+   ],
+   "id": "f52b19773d136eb4",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before (partial): $10.50\n",
+      "Failed: factor must be non-negative\n",
+      "After failure (partial):  $-20.50  // dollars changed, cents not -> inconsistent state\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001B[32mclass\u001B[39m \u001B[36mCashMutablePartial\u001B[39m\n",
+       "\u001B[36mpartialCash\u001B[39m: \u001B[32mCashMutablePartial\u001B[39m = $-20.50"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 3
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "The object is left in a broken, intermediate state: dollars changed; cents did not. Any subsequent logic now operates on corrupt data.",
+   "id": "f561ca972282cb17"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "#### 2. Immutable version (automatic failure atomicity)",
+   "id": "3929c6df3bbf26ba"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-08T12:56:37.460686Z",
+     "start_time": "2025-09-08T12:56:36.089745Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "final case class CashImmutable(dollars: Int, cents: Int) {\n",
+    "  def mul(factor: Int): CashImmutable = {\n",
+    "    if (factor < 0) throw new IllegalArgumentException(\"factor must be non-negative\")\n",
+    "    copy(dollars = dollars * factor, cents = cents * factor)\n",
+    "  }\n",
+    "  override def toString: String = f\"$$$dollars%d.$cents%02d\"\n",
+    "}\n",
+    "\n",
+    "val original = CashImmutable(10, 50)\n",
+    "println(s\"Original (immutable): $original\")\n",
+    "val twenty = original.mul(2)\n",
+    "println(s\"After success (immutable): $twenty (original still $original)\")\n",
+    "try original.mul(-3) catch { case e: Exception => println(s\"Immutable failed, original preserved: $original (${e.getMessage})\") }"
+   ],
+   "id": "4b31e283ff8316b5",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original (immutable): $10.50\n",
+      "After success (immutable): $20.100 (original still $10.50)\n",
+      "Immutable failed, original preserved: $10.50 (factor must be non-negative)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001B[32mclass\u001B[39m \u001B[36mCashImmutable\u001B[39m\n",
+       "\u001B[36moriginal\u001B[39m: \u001B[32mCashImmutable\u001B[39m = \u001B[33mCashImmutable\u001B[39m(dollars = \u001B[32m10\u001B[39m, cents = \u001B[32m50\u001B[39m)\n",
+       "\u001B[36mtwenty\u001B[39m: \u001B[32mCashImmutable\u001B[39m = \u001B[33mCashImmutable\u001B[39m(dollars = \u001B[32m20\u001B[39m, cents = \u001B[32m100\u001B[39m)\n",
+       "\u001B[36mres2_5\u001B[39m: Helper.this.CashImmutable | scala.Unit = ()"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 2
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "Because the immutable method creates and returns a new object, either it succeeds (returning a new consistent instance) or it throws, leaving the caller's reference untouched.",
+   "id": "b2e9148560d8d913"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "#### 3. Manually failure-atomic mutable implementation",
+   "id": "fabd05b85418511a"
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-09-08T12:56:31.653062Z",
+     "start_time": "2025-09-08T12:56:29.974709Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "final class CashMutableAtomic(private var dollars: Int, private var cents: Int) {\n",
+    "  def mul(factor: Int): Unit = {\n",
+    "    // Snapshot old state\n",
+    "    val beforeD = dollars\n",
+    "    val beforeC = cents\n",
+    "    try {\n",
+    "      dollars = dollars * factor\n",
+    "      if (factor < 0) throw new IllegalArgumentException(\"factor must be non-negative\")\n",
+    "      cents = cents * factor\n",
+    "    } catch {\n",
+    "      case e: Exception =>\n",
+    "        // Roll back all mutated fields\n",
+    "        dollars = beforeD\n",
+    "        cents = beforeC\n",
+    "        throw e\n",
+    "    }\n",
+    "  }\n",
+    "  override def toString: String = f\"$$$dollars%d.$cents%02d\"\n",
+    "}\n",
+    "\n",
+    "val atomic = new CashMutableAtomic(10, 50)\n",
+    "println(s\"Before (atomic): $atomic\")\n",
+    "try atomic.mul(-4) catch { case e: Exception => println(s\"Rolled back after failure: $atomic (${e.getMessage})\") }\n",
+    "atomic.mul(3)\n",
+    "println(s\"After success (atomic):  $atomic\")"
+   ],
+   "id": "85d8853494896a9e",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before (atomic): $10.50\n",
+      "Rolled back after failure: $10.50 (factor must be non-negative)\n",
+      "After success (atomic):  $30.150\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "defined \u001B[32mclass\u001B[39m \u001B[36mCashMutableAtomic\u001B[39m\n",
+       "\u001B[36matomic\u001B[39m: \u001B[32mCashMutableAtomic\u001B[39m = $30.150"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 1
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "This version preserves invariants by copying and restoring prior state on failure. It works, but at a cost:\n",
+    "\n",
+    "- Boilerplate grows with the number of fields.\n",
+    "- Easy to miss a field during rollback (especially after future modifications).\n",
+    "- Harder to read; exception handling intertwines with business logic.\n",
+    "- Encourages adding more state (since mutation seems \"managed\"), increasing risk.\n",
+    "\n",
+    "Immutable design avoids all of this incidental complexity."
+   ],
+   "id": "380dc2b49f933d76"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "#### Takeaways (Failure Atomicity)\n",
+    "\n",
+    "1. Immutable objects are inherently failure atomic: no partial mutations can leak out.\n",
+    "2. Naive mutable code often leaves objects half-updated when exceptions occur.\n",
+    "3. Achieving failure atomicity in mutable objects requires defensive snapshots and rollback logic (error-prone / verbose).\n",
+    "4. Prefer immutable value objects (case classes) for operations that transform state; return new instances.\n",
+    "5. If mutability is unavoidable (performance / interoperability), isolate it behind a tiny API and rigorously maintain invariants.\n",
+    "\n",
+    "Failure atomicity reduces debugging time, increases trust in invariants, and keeps methods focused on domain logic instead of state management scaffolding.\n"
+   ],
+   "id": "84bcba6e32e7187e"
   }
  ],
  "metadata": {
